<resources>
    <string name="app_name">Teman Katalog Film</string>
    <string name="Now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="search_movie">Search Movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="now_playing">Now Playing</string>

    <string name="tidak_ada_data">tidak ada data</string>
    <string name="ratin">Rating</string>
    <string name="duration">Duration</string>
    <string name="tagline">Rating</string>
    <string name="language">Language</string>
    <string name="genres">Genres</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="Up_coming">Up Coming</string>
    <string name="cari_film">Cari Film</string>
    <string name="cari">Cari</string>
    <string name="tx_overview">
        mmmmmmmmmm
        mmmmmmmmmm
        mmmmmmmmmm
        mmmmmmmmmm
        mmmmmmmmmm
        mmmmmmmmmm

    </string>
    <string name="save">save</string>
    <string name="_throw">throw</string>
    <string name="save_data">you save this data</string>
    <string name="delete_data">you delete this data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="refresh">refresh</string>
</resources>
