<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.detail.DetailActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_favorite"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView_poster"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    tools:src="@color/colorAccent"
                    android:layout_centerHorizontal="true"
                    />
                <LinearLayout
                    android:id="@+id/linearLayout_1"
                    android:layout_below="@+id/circleImageView_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/textView_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:text="spiderman"
                        android:textColor="@color/colorgreen"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:id="@+id/textView_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        tools:text="@string/tagline" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout_1"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:id="@+id/textView_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            tools:text="123"
                            android:textColor="@color/colorAccent"
                            android:textAlignment="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            tools:text="@string/ratin" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:id="@+id/textView_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            android:textColor="@color/colorAccent"
                            tools:text="123"
                            android:textAlignment="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            tools:text="@string/duration" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:id="@+id/textView_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            tools:text="123"
                            android:textColor="@color/colorAccent"
                            android:textAlignment="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            tools:text="@string/language" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout_3"
                    android:layout_below="@+id/linearLayout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/genres"
                        android:textColor="@color/colorgreen"
                        />
                    <TextView
                        android:id="@+id/textView_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="horror, aksi" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout_4"
                    android:layout_below="@+id/linearLayout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/release"
                        android:textColor="@color/colorgreen"
                        />
                    <TextView
                        android:id="@+id/textView_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2019, 12-12-12" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout_5"
                    android:layout_below="@+id/linearLayout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="@string/overview"
                        android:textColor="@color/colorgreen"
                        />
                    <TextView
                        android:id="@+id/textView_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="asdlfhlkasdhflkahsdkfhasdf" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        />
</RelativeLayout>